# flaskcrud

./: README.md  arkademy.db  base.html  main.py  pyproject.toml
static/css/: main.css
templates/: edit.html  index.html  lihat.html
