[tool.poetry]
name = "level-3-tugas-10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
SQLAlchemy = "^1.3.22"
Jinja2 = "^2.11.3"
flask-sqlalchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
